--- a/index.html
+++ b/index.html
@@ -9,63 +9,173 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <label class="popup-open-btn" for="settings-popup"> Settings </label>
-    <input type="checkbox" data-popup id="settings-popup" />
-    <div class="popup">
-      <div class="settings-popup">
-        <label class="close-popup" for="settings-popup">
-          <img src="img/icon-close.svg" />
-          <span>Close</span>
-        </label>
-        <h3>Settings</h3>
-        <ul>
-          <li>
-            <div class="item">
-              <h5>Language</h5>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut vero
-                inventore vel aut expedita magnam error odio, modi sed. Commodi
-                accusamus harum itaque eaque ad asperiores tenetur officiis
-                aliquam voluptatem obcaecati placeat.
-              </p>
-              <select class="">
-                <option value="english">English</option>
-                <option value="english">Türkçe</option>
-                <option value="english">Almanca</option>
-              </select>
-            </div>
-          </li>
-        </ul>
-        <hr />
-        <ul>
-          <li>
-            <div class="item">
-              <h5>Autoplay Vidoes</h5>
-              <p>Choose if you wnat to autoplay on your browser</p>
-            </div>
-            <label class="checkbox-input">
-              <input type="checkbox" checked />
-              <span class="checkbox"></span>
-            </label>
-          </li>
-          <li>
-            <div class="item">
-              <h5>Show profile photes</h5>
-              <p>
-                Choose whether to show or hide profile photos of other members.
-              </p>
-            </div>
-            <label class="checkbox-input">
-              <input type="checkbox" />
-              <span class="checkbox"></span>
-            </label>
-          </li>
-        </ul>
-        <div class="actions">
-          <a href="#" class="active">Save</a>
-          <a href="#">Cancel</a>
-        </div>
+    <div class="header">
+      <div class="icon">
+        <img src="img/medium.png" alt="" />
+      </div>
+      <ul>
+        <li>Sign in</li>
+        <li class="get-started"><button>Get started</button></li>
+      </ul>
+    </div>
+    <div class="header sub-header">
+      <div class="sub-icon">
+        <img
+          alt="The Startup"
+          class=""
+          src="https://miro.medium.com/max/422/1*IOJrKVmLnRcFz3E_KrrN_Q.png"
+          width="211"
+          height="36"
+        />
+      </div>
+      <div class="sub-buttons">
+        <a href="#">SUBMIT</a>
+        <span> | </span>
+        <a href="#">GET SMARTER AT WRITING</a>
       </div>
     </div>
+    <main class="main">
+      <div class="title">
+        <h1>Non-Coding Activities That Boost Developer Skills</h1>
+      </div>
+      <div class="account-bar">
+        <div class="accoutn-info">user info</div>
+
+        <div class="account-icon">
+          <ul>
+            <li>
+              <svg width="29" height="29" class="gs">
+                <path
+                  d="M22.05 7.54a4.47 4.47 0 0 0-3.3-1.46 4.53 4.53 0 0 0-4.53 4.53c0 .35.04.7.08 1.05A12.9 12.9 0 0 1 5 6.89a5.1 5.1 0 0 0-.65 2.26c.03 1.6.83 2.99 2.02 3.79a4.3 4.3 0 0 1-2.02-.57v.08a4.55 4.55 0 0 0 3.63 4.44c-.4.08-.8.13-1.21.16l-.81-.08a4.54 4.54 0 0 0 4.2 3.15 9.56 9.56 0 0 1-5.66 1.94l-1.05-.08c2 1.27 4.38 2.02 6.94 2.02 8.3 0 12.86-6.9 12.84-12.85.02-.24 0-.43 0-.65a8.68 8.68 0 0 0 2.26-2.34c-.82.38-1.7.62-2.6.72a4.37 4.37 0 0 0 1.95-2.51c-.84.53-1.81.9-2.83 1.13z"
+                ></path>
+              </svg>
+            </li>
+            <li>
+              <svg
+                width="29"
+                height="29"
+                viewBox="0 0 29 29"
+                fill="none"
+                class="gs"
+              >
+                <path
+                  d="M5 6.36C5 5.61 5.63 5 6.4 5h16.2c.77 0 1.4.61 1.4 1.36v16.28c0 .75-.63 1.36-1.4 1.36H6.4c-.77 0-1.4-.6-1.4-1.36V6.36z"
+                ></path>
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M10.76 20.9v-8.57H7.89v8.58h2.87zm-1.44-9.75c1 0 1.63-.65 1.63-1.48-.02-.84-.62-1.48-1.6-1.48-.99 0-1.63.64-1.63 1.48 0 .83.62 1.48 1.59 1.48h.01zM12.35 20.9h2.87v-4.79c0-.25.02-.5.1-.7.2-.5.67-1.04 1.46-1.04 1.04 0 1.46.8 1.46 1.95v4.59h2.87v-4.92c0-2.64-1.42-3.87-3.3-3.87-1.55 0-2.23.86-2.61 1.45h.02v-1.24h-2.87c.04.8 0 8.58 0 8.58z"
+                  fill="#fff"
+                ></path>
+              </svg>
+            </li>
+            <li>
+              <svg width="29" height="29" class="gs">
+                <path
+                  d="M23.2 5H5.8a.8.8 0 0 0-.8.8V23.2c0 .44.35.8.8.8h9.3v-7.13h-2.38V13.9h2.38v-2.38c0-2.45 1.55-3.66 3.74-3.66 1.05 0 1.95.08 2.2.11v2.57h-1.5c-1.2 0-1.48.57-1.48 1.4v1.96h2.97l-.6 2.97h-2.37l.05 7.12h5.1a.8.8 0 0 0 .79-.8V5.8a.8.8 0 0 0-.8-.79"
+                ></path>
+              </svg>
+            </li>
+            <li>
+              <svg width="25" height="25" viewBox="0 0 25 25">
+                <path
+                  d="M19 6a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v14.66h.01c.01.1.05.2.12.28a.5.5 0 0 0 .7.03l5.67-4.12 5.66 4.13a.5.5 0 0 0 .71-.03.5.5 0 0 0 .12-.29H19V6zm-6.84 9.97L7 19.64V6a1 1 0 0 1 1-1h9a1 1 0 0 1 1 1v13.64l-5.16-3.67a.49.49 0 0 0-.68 0z"
+                  fill-rule="evenodd"
+                ></path>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="photo">
+        <img class="images" src="img/photo1.jpeg" alt="" />
+      </div>
+      <div class="photo-info">
+        <p>Photo by <a href="#"> Zan </a> on <a href="#"> Unsplash</a></p>
+      </div>
+      <span>. . .</span>
+      <p class="text-paragraf">
+        You can’t write code 24/7. In fact, you shouldn’t. If you find yourself
+        pulling more and more all-nighters or marathon coding sessions then you
+        are probably pushing subpar code. If you don’t take breaks to let your
+        mind work on other things, or stop to consider the design decisions of
+        your project then you won’t operate at your best. Your brain needs time
+        for reflection, and to zone out. You need time to step back and examine
+        big picture items.
+      </p>
+      <p class="text-paragraf">
+        The longer you go down a rabbit hole of writing line after line only
+        prolongs the inevitable. You’ll burn out, get discouraged and lose
+        focus. What’s worse, you might even make poor architecture decisions
+        that only lead to more work in the long run.
+      </p>
+      <p class="text-paragraf">
+        Don’t give in to the culture of hyper-productivity by thinking the more
+        you code the better you are. This is true if you’re learning a new
+        language or trying to cement syntax fundamentals in your brain, but this
+        stops working down the road. You need to take time to do other things.
+        Write code and then reflect on that code, whether consciously or
+        subconsciously.
+      </p>
+      <p class="text-paragraf">
+        In this article we’ll explore some activities you can use to not only
+        take breaks from coding sessions, but also expand your abilities as a
+        developer. On the surface some of these activities might seem simple
+        but, they teach us important skills and sharpen our mind to become even
+        better developers. Elements of problem solving, pattern recognition and
+        patient craftsmanship are present in many common hobbies and activities.
+        Let’s explore a few of these.
+      </p>
+      <h1 class="sub-title">Playing video games</h1>
+      <p class="quotes text-paragraf">
+        “You mean I can play video games and get smarter!?”
+      </p>
+      <img class="images" src="img/photo2.jpeg" alt="" />
+      <div class="photo-info">
+        <p>
+          Photo by <a href="#"> Alvaro Reyes </a> on <a href="#"> Unsplash</a>
+        </p>
+      </div>
+      <p class="text-paragraf">
+        Sort of. I’m not talking about mindless first-person shooter games,
+        though. I’m referring to strategy games, sandbox games, puzzle games,
+        games that force you to plan, adapt, recognize patterns and problem
+        solve. Managing resources, planing an attack or solving a puzzle all
+        contribute to making you a sharper developer.
+      </p>
+      <p class="text-paragraf">But how?</p>
+      <p class="text-paragraf">
+        In these kinds of games you are forced to think ahead and to test
+        strategies. You can build something, move it, build it again. You can
+        allocate resources into different areas of research and see how it
+        impacts the overall technology tree. All of these elements draw massive
+        parallels to coding. When you develop an application you’re doing the
+        same thing. You’re testing strategies and solving puzzles. The only
+        difference is that there usually aren’t any fancy graphics associated
+        with the work.
+      </p>
+      <p class="text-paragraf">
+        There are a staggering number of great games that exemplify these key
+        developer elements. A few that I’ve enjoyed are listed below with some
+        notes about why they’re so useful:
+      </p>
+      <div class="list">
+        <ul>
+          <li>
+            <a href="#">Minecraft</a
+            ><span> (design thinking, planning and systems architecture)</span>
+          </li>
+          <li>
+            <a href="#"
+              >Civilization V
+              <span>(critical thinking, planning and problem solving)</span></a
+            >
+          </li>
+          <li>
+            <a href="#">Portal </a> <span> / </span><a href="#">Portal 2</a>
+          </li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
