fix a few mistake

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           src="https://miro.medium.com/max/422/1*IOJrKVmLnRcFz3E_KrrN_Q.png"
           width="211"
           height="36"
+          style="cursor: pointer"
         />
       </div>
       <div class="sub-buttons">
@@ -39,7 +40,7 @@
         <h1>Non-Coding Activities That Boost Developer Skills</h1>
       </div>
       <div class="account-bar">
-        <div class="accoutn-info">user info</div>
+        <div class="account-info">user info</div>
 
         <div class="account-icon">
           <ul>
@@ -88,7 +89,7 @@
         </div>
       </div>
       <div class="photo">
-        <img class="images" src="img/photo1.jpeg" alt="" />
+        <img class="images" src="img/photo1.jpeg" alt="" style="width: 35vw" />
       </div>
       <div class="photo-info">
         <p>Photo by <a href="#"> Zan </a> on <a href="#"> Unsplash</a></p>
@@ -162,20 +163,136 @@
       <div class="list">
         <ul>
           <li>
-            <a href="#">Minecraft</a
-            ><span> (design thinking, planning and systems architecture)</span>
+            Minecraft (design thinking, planning and systems architecture)
           </li>
           <li>
-            <a href="#"
-              >Civilization V
-              <span>(critical thinking, planning and problem solving)</span></a
-            >
+            Civilization V (critical thinking, planning and problem solving)
           </li>
-          <li>
-            <a href="#">Portal </a> <span> / </span><a href="#">Portal 2</a>
-          </li>
+          <li>Portal / Portal 2 (problem solving, pattern recognition)</li>
         </ul>
       </div>
+      <h1 class="sub-title">Small electronics projects</h1>
+      <p class="text-paragraf">
+        When you learn the fundamentals of electronics and get your hands dirty
+        with how circuits work you strengthen your understanding of systems.
+        Systems are present everywhere, especially in software development.
+        Working with an electrical network of hardware circuits and components
+        is similar to working with a system of software. The core concepts
+        remain the same with regards to efficient design and effective planning.
+        Working with electronics teaches you to build better systems.
+      </p>
+      <p class="text-paragraf">
+        As you begin to layout a circuit and connect the components together
+        you’ll build not only physical hardware engineering skills but technical
+        design skills as well. These translate directly into your role as a
+        developer and give you a different perspective on building complex
+        systems. You’ll also be forced to work with a less forgiving physical
+        medium. If you make a mistake you can’t just delete it and start over.
+        With electronics you might accidentally destroy a component or be forced
+        to de-solder an entire board and start from scratch.
+      </p>
+      <p class="text-paragraf">
+        If you haven’t worked with electronics before there is no better time to
+        start than right now. There is a plethora of free educational material
+        online and DIY kits are available for exceptionally low cost from
+        multiple sources. Some fantastic resources to get started with are
+        available below:
+      </p>
+      <ul>
+        <li>Arduino (low-cost microcontroller kits and modules)</li>
+        <li>
+          Adafruit (basic to advanced DIY project kits and parts supplier)
+        </li>
+      </ul>
+      <h1 class="sub-title">Woodworking</h1>
+
+      <p class="text-paragraf">
+        Consistent with key fundamentals of planning, design and working with
+        your hands, woodworking is also a great way to take a technology break.
+        You get to work with a completely different medium, navigate new
+        technical design challenges and you get to step away from tech
+        completely. Components are not hidden away behind abstraction layers and
+        interfaces. Wood is wood. If you make a mistake you see it immediately.
+        Crafting wooden objects by hand requires careful attention to detail and
+        teaches you a high degree of patience.
+      </p>
+      <img class="images" src="img/photo3.jpeg" alt="" />
+      <div class="photo-info">
+        <p>
+          Photo by <a href="#"> Dominik Scythe </a> on <a href="#"> Unsplash</a>
+        </p>
+      </div>
+      <p class="text-paragraf">
+        The next time you’re complaining about waiting for some code to compile,
+        imagine having to wait 8 hours for glue to set. This level of patience
+        and attention to craftsmanship will translate readily into your
+        engineering work when you return to it.
+      </p>
+      <p class="text-paragraf">
+        Check out Woodcraft for some great beginner woodworking guides and
+        advice.
+      </p>
+      <h1 class="sub-title">Drawing / Diagramming</h1>
+      <p class="text-paragraf">
+        Take a break and put pen to paper, marker to whiteboard or quill to
+        parchment. Whatever drawing medium suits you, taking time to sketch out
+        ideas or even just doodle will provide your brain with a much needed
+        reset. Even if you think an idea is simple and you know all the pieces
+        involved, there is a high probability drawing it out as a diagram or
+        sketch will uncover hidden elements.
+      </p>
+      <p class="text-paragraf">
+        When you draw the components of an idea out on paper they start out as
+        islands. As the idea is fleshed out you connect everything together
+        visually and see how things might operate. Where dependencies might be
+        missing, how a connection might not work as you had initially thought.
+        This process slowly walks your brain through the architecture of an idea
+        instead of flying straight into coding / problem-solving mode.
+      </p>
+
+      <p class="text-paragraf">
+        If pen and paper still isn’t your thing, you can always spend some
+        “code-free” time with a visual diagramming application like Mermaid.
+        Check out Making Diagrams Fun With Mermaid by Ozan Tunca for a superb
+        guide.
+      </p>
+
+      <h1 class="sub-title">Exercise</h1>
+
+      <p class="text-paragraf">
+        I can’t tell you how many ideas I’ve come up with and problems I’ve
+        solved while out on a run. Zoning out while exercising might not seem
+        like an effective way to come up with solutions, but it actually works
+        quite well. Sometimes all it takes is focusing your attention away from
+        the issue you’re trying to solve. If you keep hammering against the same
+        thought process for too long you’ll just end up in a rut spinning your
+        wheels. Escaping for a quick bout of physical activity frees your mind
+        to wander and brings sub-conscious solutions to the foreground.
+      </p>
+      <img class="images" src="img/photo4.jpeg" alt="" />
+      <div class="photo-info">
+        <p>
+          Photo by <a href="#"> Fitsum Admasu </a> on <a href="#"> Unsplash</a>
+        </p>
+      </div>
+
+      <p class="text-paragraf">
+        Aside from the obvious physical health benefits of exercise, there are
+        many mental benefits. A sharper memory and ability to problem solve top
+        the list of benefits for developers. I’ve personally noticed that I
+        write more efficient code and produce less errors following a good
+        workout. The workout doesn’t have to be peak intensity either, sometimes
+        a short walk is all it takes to have that “Aha!” moment.
+      </p>
+      <p class="text-paragraf">
+        In an excellent piece, How Fitness Transformed Me into a Better Web
+        Developer, Rachel Lum provides a detailed look into the ability for
+        exercise to enhance a developer’s skills.
+      </p>
     </main>
+    <div class="clab-bar"></div>
+    <div class="account-info"></div>
+    <div class="more"></div>
+    <footer class="footer-page"></footer>
   </body>
 </html>
